<resources>
    <string name="app_name">BakingApp</string>
    <string name="json_url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="WelcomeMessage">Welcome to Baking nirvana</string>
    <string name="STEPS">Steps</string>
    <string name="steps">steps</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="Ingredient">ingredients</string>
    <string name="Img">image</string>
    <string name="EXTRA_ITEM">in.chundi.bakingapp.EXTRA_ITEM</string>
    <string name="wdgtRecpName">widget_recipe_name</string>
    <string name="NoInternet">No Internet Connection Detected</string>
    <string name="NoRecpRecv">No Recipe received</string>
    <string name="NumOfServings">No of Servings:</string>
    <string name="Qty">Quantity :</string>
    <string name="Msr">Measure  :</string>
    <string name="RcpNotAvail">Recipe not available</string>
    <string name="recipe_name">RECIPE NAME</string>
    <string name="recipe_steps">RECIPE STEPS</string>
    <string name="no_of_servings">No of Servings</string>
    <string name="ingredients">Ingredients</string>
</resources>
