<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_me_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="4"
        android:scaleType="center"
        android:src="@drawable/welcome" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/green"
        android:onClick="showBakeRecipes"
        android:text="Welcome to Baking nirvana" />

</LinearLayout>





