<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!--android:indicatorStart="14.5sp"-->

    <ExpandableListView
        android:id="@+id/recipe_steps_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:listSelector="#0f0"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="36sp" />

</FrameLayout>